--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,17 +1,21 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    {% if error %}
-        <div class="alert alert-danger" role="alert">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+	{% if error %}
+		<div class="alert alert-danger" role="alert">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+	{% endif %}
 
-    <form action="{{ path('login_check') }}" method="post">
-        <label for="username">Nom d'utilisateur :</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}" />
+	<form action="{{ path('login_check') }}" method="post">
+		<label for="username">Nom d'utilisateur :</label>
+		{# <input type="text" id="username" name="_username" value="{{ last_username }}"/> #}
+        <input type="text" value="{{ last_username }}" name="_username" id="username" autocomplete="username" required autofocus>
 
-        <label for="password">Mot de passe :</label>
-        <input type="password" id="password" name="_password" />
+		<label for="password">Mot de passe :</label>
+		{# <input type="password" id="password" name="_password"/> #}
+		<input type="password" name="_password" id="password" autocomplete="current-password" required>
 
-        <button class="btn btn-success" type="submit">Se connecter</button>
-    </form>
+		<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+		<button class="btn btn-success" type="submit">Se connecter</button>
+	</form>
 {% endblock %}
