--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,9 +20,9 @@
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 		<!--[if lt IE 9]>
-		        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-		        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-		        <![endif]-->
+						        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+						        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+						        <![endif]-->
 	</head>
 
 	<body>
@@ -39,8 +39,9 @@
 		<!-- Page Content -->
 		<div class="container">
 			<div class="row">
-				<a href="{{ path('user_create') }}" class="btn btn-primary">Créer un utilisateur</a>
+				<a href="{{ path('homepage') }}" class="btn btn-primary">Retour à l'accueil</a>
 				{% if is_granted('ROLE_ADMIN') %}
+					<a href="{{ path('user_create') }}" class="btn btn-primary">Créer un utilisateur</a>
 					<a href="{{ path('user_list') }}" class="btn btn-primary">Liste des utilisateurs</a>
 				{% endif %}
 
