--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -46,7 +46,7 @@
 				{% endif %}
 
 				{% if app.user %}
-					<a href="{{ path('logout') }}" class="pull-right btn btn-danger">Se déconnecter</a>
+					<a href="{{ path('_logout_main') }}" class="pull-right btn btn-danger">Se déconnecter</a>
 				{% endif %}
 
 				{% if not app.user and 'login' != app.request.attributes.get('_route') %}
